--- a/dispDemo.qrc
+++ b/dispDemo.qrc
@@ -3,5 +3,11 @@
         <file>images/cheese.jpg</file>
         <file>images/plane.jpg</file>
         <file>images/gimp.jpg</file>
+        <file>images/background.jpg</file>
+        <file>images/adi.jpg</file>
+        <file>images/background_m1.jpg</file>
+        <file>images/adi_land.jpg</file>
+        <file>images/adi_360_480.jpg</file>
+        <file>images/adi_600_600.jpg</file>
     </qresource>
 </RCC>
